@@ -6,6 +6,7 @@ This file documents the major additions and syntax changes between releases.
 	check_snmp now support Counter64
 	Fix compilation of check_ldap, check_radius and check_pgsql
 	check_load can optionally divide by number of cpus
+        Fix check_time returning wrong OK when time is before the epoch on some arch
 
 1.4.8 11th April 2007
 	Respects --without-world-permissions for setuid plugins
